--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "prettier-eslint": "^8.8.2",
     "vue": "^2.5.2",
+    "shelljs": "^0.7.8",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
