--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "connect-history-api-fallback": "^1.6.0",
     "cordova-android": "^8.0.0",
     "cordova-browser": "^6.0.0",
     "cordova-ios": "^5.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
     "prettier-eslint": "^8.8.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
